# dummy-repo

./: .gitattributes  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  appveyor.yml  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.rst  ISSUE_TEMPLATE.md  SUPPORT.rst
src/dummy_repo/: __init__.py  helpers.py
tests/test_integration/: test_api.py
tests/test_unit/: test_helpers.py
